@@ -5,7 +5,9 @@ Major changes for each release are described here. Detailed changes between
 two versions can be retrieved from Subversion.
 
 0.7
-=== (2008-??-??)
+=== (2009-??-??)
+
+* Added support for happyfoto.cz.
 
 0.6
 === (2008-03-21)
